--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -309,7 +309,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                         <option id="Study 3 sketch 1, nPages=2, nTracks=8, track.maxVolumes=100 100 100 100 100 100 100 100">Study 3 sketch 1</option>
                         <option id="Song Six, nPages=7, nTracks=6,
                             track.maxVolumes=100 100 127 100 100 100, track.pitchWheelDeviations=2 2 4 2 2 2,
-                            po.pressure.minimum=40, po.pressure.otherTracks, po.pressure.selectedIndex=4,
+                            po.minimumVolume=40, po.pressure.otherTracks, po.pressure.selectedIndex=4,
                             po.pitchWheel.otherTracks, po.pitchWheel.selectedIndex=2">Song Six</option>
                         <!-------------------------------------------------------------------------------------
                             See getScoreInfo() in Controls.js. for a description of what these id string options mean and how to set them.
@@ -318,7 +318,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                             <option 
                                 id="Song Six, nPages=7, nTracks=6,
                                 track.maxVolumes=100 100 127 100 100 100, track.pitchWheelDeviations=2 2 4 2 2 2,
-                                po.pressure.minimum=50, po.track=4, po.pitch.soloTrack, po.pitch.otherTracks, po.velocity.soloTrack,
+                                po.minimumVolume=50, po.track=4, po.pitch.soloTrack, po.pitch.otherTracks, po.velocity.soloTrack,
                                 po.velocity.otherTracks, po.pressure.soloTrack, po.pressure.otherTracks, po.pressure.selectedIndex=5,
                                 po.pitchWheel.soloTrack, po.pitchWheel.otherTracks, po.pitchWheel.selectedIndex=6, po.modWheel.soloTrack,
                                 po.modWheel.otherTracks, po.modWheel.selectedIndex=7,
@@ -415,16 +415,16 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                                                 tracks                                      
                                             </div>
                                             <div style="display: table">
-                                                <div id="minPressureDiv" style="display: table-row; text-align:right; visibility:hidden;">
+                                                <div id="minVolumeDiv" style="display: table-row; text-align:right; visibility:hidden;">
                                                     <div class="checkboxCell">
                                                         &nbsp;
                                                     </div>
                                                     <div class="checkboxCell" style="width: 50px; text-align:right;">
                                                         minimum<br />
-                                                        pressure                                      
+                                                        volume                                      
                                                     </div>
                                                     <div class="checkboxCell">
-                                                        <input type="text" id="minPressureInputText" value="64"
+                                                        <input type="text" id="minVolumeInputText" value="64"
                                                             style="padding: 0px; margin: 8px 0px 0px 0px; width: 30px; vertical-align: middle; font-size: 11px;">
                                                     </div>
                                                 </div>
