--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -307,12 +307,13 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                         <option id="choose a score, nPages=0, nTracks=0">choose a score</option>
                         <option id="Study 2c3.1, nPages=3, nTracks=3, track.maxVolumes=100 100 100">Study 2c3.1</option>
                         <option id="Study 3 sketch 1, nPages=2, nTracks=8, track.maxVolumes=100 100 100 100 100 100 100 100">Study 3 sketch 1</option>
-                        <option id="Song Six, nPages=7, nTracks=6,
-                            track.maxVolumes=100 100 127 100 100 100, track.pitchWheelDeviations=2 2 4 2 2 2,
+                        <option id="Song Six, nPages=9, nTracks=9,
+                            track.maxVolumes=100 100 100 100 100 127 100 100 100, track.pitchWheelDeviations=2 2 2 2 2 4 2 2 2,
                             po.pressure.otherTracks, po.pressure.selectedIndex=4,
                             po.pitchWheel.otherTracks, po.pitchWheel.selectedIndex=2,
                             po.speedControl.maximumFactor=400, po.speedControl.selectedIndex=1,
-                            po.minimumVolume=50">Song Six</option>
+                            po.minimumVolume=50,
+                            po.trackSelector.selectedIndex=4">Song Six</option>
                         <!-------------------------------------------------------------------------------------
                             See getScoreInfo() in Controls.js. for a description of what these id string options mean and how to set them.
                             The first three options (name, nPages and nTracks) are compulsory, all the others are optional.
@@ -329,7 +330,8 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                                 po.pitchWheel.soloTrack, po.pitchWheel.otherTracks, po.pitchWheel.selectedIndex=6,  // default is checkBox.checked === false and selectedIndex === 0
                                 po.modWheel.soloTrack, po.modWheel.otherTracks, po.modWheel.selectedIndex=7",  // default is checkBox.checked === false and selectedIndex === 0
                                 po.speedControl.maximumFactor=200, po.speedControllerSelectedIndex=4,  // default is maximumFactor=2, selectedIndex === 0
-                                po.minimumVolume=50 >   // default is minimumVolume === 64
+                                po.minimumVolume=50,   // default is minimumVolume === 64
+                                po.trackSelector.selectedIndex=4" > // default is 0
                             Song Six</option>
                         ---------------------------------------------------------------------------------------->
                     </select>
