Minimum pressure option completed (!)
The minimum pressure option provides a lower limit to the
pressure values (Aftertouch or ChannelPressure) received
by the assistant from the live performer.
This ensures that the assistant's volumes do not get set to 0
when the performer begins a rest.
This option had only been _partially_realized... It now works!

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -516,9 +516,9 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                                             width: 40px; vertical-align: middle;">
                                     %
                                 </div>
-                                <div id="minVolumeDiv" style="display: table-cell; padding-top: 6px; padding-left: 50px; visibility: hidden;">
+                                <div id="minimumPressureDiv" style="display: table-cell; padding-top: 6px; padding-left: 50px; visibility: hidden;">
                                     min volume:                                     
-                                    <input type="text" id="minVolumeInputText" value="64" style="padding: 0px; margin: 0px 0px 3px 0px;
+                                    <input type="text" id="minimumPressureInputText" value="64" style="padding: 0px; margin: 0px 0px 3px 0px;
                                             width: 40px; vertical-align: middle;">
                                 </div>
                             </div>
