Replaced Palettes.js by ChordDef.js
Removed all references to palette definitions.
Chord msDurations are now always calculated as the
sum of the contained basicMidiChords, since Moritz
no longer writes the chord's msDuration at the top
chord level.

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -544,7 +544,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
     <script src="ap/Namespace.js" type="text/javascript"></script>
     <script src="ap/Markers.js" type="text/javascript"></script>
-    <script src="ap/Palettes.js" type="text/javascript"></script>
+    <script src="ap/ChordDef.js" type="text/javascript"></script>
     <script src="ap/MIDIChord.js" type="text/javascript"></script>
     <script src="ap/Assistant.js" type="text/javascript"></script>
     <script src="ap/Score.js" type="text/javascript"></script>
