--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -540,6 +540,8 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <script src="midiLib/Moment.js" type="text/javascript"></script>
     <script src="midiLib/Track.js" type="text/javascript"></script>
     <script src="midiLib/Sequence.js" type="text/javascript"></script>
+    <script src="midiLib/TrackRecording.js" type="text/javascript"></script>
+    <script src="midiLib/SequenceRecording.js" type="text/javascript"></script>
     <script src="midiLib/StandardMIDIFile.js" type="text/javascript"></script>
 
     <script src="ap/Namespace.js" type="text/javascript"></script>
