--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -547,7 +547,8 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <script src="ap/Namespace.js" type="text/javascript"></script>
     <script src="ap/Markers.js" type="text/javascript"></script>
     <script src="ap/ChordDef.js" type="text/javascript"></script>
-    <script src="ap/MIDIChord.js" type="text/javascript"></script>
+    <script src="ap/MidiChord.js" type="text/javascript"></script>
+    <script src="ap/MidiRest.js" type="text/javascript"></script>
     <script src="ap/Assistant.js" type="text/javascript"></script>
     <script src="ap/Score.js" type="text/javascript"></script>
     <script src="ap/TracksControl.js" type="text/javascript"></script>
