Added note: activate Web-MIDI-API flag in Chrome.
Note added to top of assistantPerformer.html.
Chrome no longer uses Chris Wilson's shim!

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -284,6 +284,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
             <div style="font-family: Lucida Sans Unicode, Verdana, Arial, Geneva, Sans-Serif; color: #8888FF; font-size: 12px">
                 This page currently runs in the latest versions of Chrome and Firefox, with the <a href="http://jazz-soft.net">Jazz</a>
                 plug-in (v 1.3) installed.<br />
+                To use Chrome, activate the Web-MIDI-API flag in chrome://flags.<br />
                 <a
                     id="aboutAssistantPerformerLink"
                     style="font-size: 11px;"
