--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -532,21 +532,18 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
         </div>
     </div>
 
-    <script src="midiLib/Namespace.js" type="text/javascript"></script>
-
-    <script src="midiLib/WebMIDIAPI.js" type="text/javascript"></script>
-
-    <script src="midiLib/Constants.js" type="text/javascript"></script>
-    <script src="midiLib/Message.js" type="text/javascript"></script>
-    <script src="midiLib/Moment.js" type="text/javascript"></script>
-    <script src="midiLib/Track.js" type="text/javascript"></script>
-    <script src="midiLib/Performer.js" type="text/javascript"></script>
-    <script src="midiLib/Sequence.js" type="text/javascript"></script>
-    <script src="midiLib/TrackRecording.js" type="text/javascript"></script>
-    <script src="midiLib/SequenceRecording.js" type="text/javascript"></script>
-    <script src="midiLib/StandardMIDIFile.js" type="text/javascript"></script>
-
+    <script src="shim/WebMIDIAPI.js" type="text/javascript"></script>
+    
     <script src="ap/Namespace.js" type="text/javascript"></script>
+    <script src="ap/Constants.js" type="text/javascript"></script>
+    <script src="ap/Message.js" type="text/javascript"></script>
+    <script src="ap/Moment.js" type="text/javascript"></script>
+    <script src="ap/Track.js" type="text/javascript"></script>
+    <script src="ap/Performer.js" type="text/javascript"></script>
+    <script src="ap/Sequence.js" type="text/javascript"></script>
+    <script src="ap/TrackRecording.js" type="text/javascript"></script>
+    <script src="ap/SequenceRecording.js" type="text/javascript"></script>
+    <script src="ap/StandardMIDIFile.js" type="text/javascript"></script>
     <script src="ap/Markers.js" type="text/javascript"></script>
     <script src="ap/ChordDef.js" type="text/javascript"></script>
     <script src="ap/MidiChord.js" type="text/javascript"></script>
