--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -539,6 +539,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <script src="ap/Message.js" type="text/javascript"></script>
     <script src="ap/Moment.js" type="text/javascript"></script>
     <script src="ap/Track.js" type="text/javascript"></script>
+    <script src="ap/Performer.js" type="text/javascript"></script>
     <script src="ap/Player.js" type="text/javascript"></script>
     <script src="ap/Sequence.js" type="text/javascript"></script>
     <script src="ap/TrackRecording.js" type="text/javascript"></script>
