Performer.js renamed to MonoInput.js
When complete, MonoInput.js will define the
monoInput namespace defining an event
handler for a mono input device such as an
R2M or EWI.
Also
1. Added the file PolyInput.js. This currently
just contains stubs, but will eventually define
the polyInput namespace which handles each
key of a keyboard independently. This can be
used to realize things like prepared pianos.
2. Updated assistantPerformer.html, Controls.js
and Player.js for the new, projected namespaces.

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -539,7 +539,6 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <script src="ap/Message.js" type="text/javascript"></script>
     <script src="ap/Moment.js" type="text/javascript"></script>
     <script src="ap/Track.js" type="text/javascript"></script>
-    <script src="ap/Performer.js" type="text/javascript"></script>
     <script src="ap/Player.js" type="text/javascript"></script>
     <script src="ap/Sequence.js" type="text/javascript"></script>
     <script src="ap/TrackRecording.js" type="text/javascript"></script>
@@ -554,5 +553,8 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <script src="ap/Controls.js" type="text/javascript"></script>
     <script src="ap/Main.js" type="text/javascript"></script>
 
+    <!-- loaded here, but only referenced at play time -->
+    <script src="ap/MonoInput.js" type="text/javascript"></script>
+    <script src="ap/PolyInput.js" type="text/javascript"></script> <!-- currently just a stub -->
 </body>
 </html>
