Revised the documentation (APOverview.txt)
Also updated WebMIDIAPI.js, renamed
StandardMIDIFile.js to StandardMidiFile.js
and refactored
StandardMIDIFile -->StandardMidiFile and
standardMIDIFile -->standardMidiFile
Deleted _oldAssistant.js, since I no longer need
to refer to it.

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -777,15 +777,15 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <script src="ap/Utilities.js" type="text/javascript"></script>
     <script src="ap/Message.js" type="text/javascript"></script>
     <script src="ap/Moment.js" type="text/javascript"></script>
+    <script src="ap/MidiChord.js" type="text/javascript"></script>
+    <script src="ap/MidiRest.js" type="text/javascript"></script>
     <script src="ap/Track.js" type="text/javascript"></script>
     <script src="ap/Sequence.js" type="text/javascript"></script>
     <script src="ap/TrackRecording.js" type="text/javascript"></script>
     <script src="ap/SequenceRecording.js" type="text/javascript"></script>
-    <script src="ap/StandardMIDIFile.js" type="text/javascript"></script>
+    <script src="ap/StandardMidiFile.js" type="text/javascript"></script>
     <script src="ap/Markers.js" type="text/javascript"></script>
     <script src="ap/ChordDef.js" type="text/javascript"></script>
-    <script src="ap/MidiChord.js" type="text/javascript"></script>
-    <script src="ap/MidiRest.js" type="text/javascript"></script>
     <script src="ap/Score.js" type="text/javascript"></script>
     <script src="ap/TracksControl.js" type="text/javascript"></script>
     <script src="ap/PerformersOptionsDialog.js" type="text/javascript"></script>
