--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -21,8 +21,9 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                 Assistant Performer
             </p>
             <div style="font-family: Lucida Sans Unicode, Verdana, Arial, Geneva, Sans-Serif; color: #8888FF; font-size: 12px">
-                This page currently runs in the latest versions of Chrome and Firefox, with the <a href="http://jazz-soft.net">Jazz</a>
-                plug-in (v 1.3) installed.<br />
+                This page currently runs in the latest version 
+				of Firefox with the <a href="http://jazz-soft.net">Jazz</a>
+                plug-in (at least v 1.3) installed.<br />
                 To use Chrome, activate the Web-MIDI-API flag in chrome://flags.<br />
                 <a
                     id="aboutAssistantPerformerLink"
