Updates to README and assistantPerformer.html
The publicAssistantPerformer directory has moved
to the directory masterAssistantPerformer.
masterAssistantPerformer/assistantPerformer.html
has been renamed masterAssistantPerformer.html
This update simply updates the links in the README
and assistantPerformer.html.

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -5,7 +5,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Assistant Performer</title>
     <link
-        href="assistantPerformerStyleSheet.css"
+        href="../assistantPerformerStyleSheet.css"
         media="all"
         rel="stylesheet"
         type="text/css" />
@@ -28,8 +28,8 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                 <a
                     id="aboutAssistantPerformerLink"
                     style="font-size: 11px;"
-                    href="http://james-ingram-act-two.de/open-source/publicAssistantPerformer/aboutAssistantPerformer.html">
-                    More about this version of the Assistant Performer...</a>
+                    href="http://james-ingram-act-two.de/open-source/assistantPerformer/aboutAssistantPerformer.html">
+                    About the Assistant Performer</a>
             </div>
             <div id="options" class="options">
                 <div style="font-size: 14px;">
