--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -294,7 +294,8 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <script src="ap/MidiChord.js" type="text/javascript"></script>
     <script src="ap/MidiRest.js" type="text/javascript"></script>
     <script src="ap/Track.js" type="text/javascript"></script>
-    <script src="ap/Sequence.js" type="text/javascript"></script>
+	<script src="ap/Sequence.js" type="text/javascript"></script>
+	<script src="ap/Seq.js" type="text/javascript"></script>
     <script src="ap/TrackRecording.js" type="text/javascript"></script>
     <script src="ap/SequenceRecording.js" type="text/javascript"></script>
     <script src="ap/StandardMidiFile.js" type="text/javascript"></script>
